WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294956
Setting innerHTML doesn't always use a scoped custom element registry associated with the context object
https://bugs.webkit.org/show_bug.cgi?id=294956
Summary
Setting innerHTML doesn't always use a scoped custom element registry associa...
Ryosuke Niwa
Reported
2025-06-24 22:43:21 PDT
e.g. ```js const registry = new CustomElementRegistry; const someElement = document.createElement('span', {customElementRegistry: registry}); someElement.innerHTML = `<span></span>`; ``` Then `someElement.querySelector("span").customElementRegistry` should be `registry` but it's `window.customElements` instead. This bug was caught by WPT with
https://github.com/web-platform-tests/wpt/pull/53171
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-06-24 22:53:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47167
EWS
Comment 2
2025-06-25 15:12:53 PDT
Committed
296637@main
(78eef71291c8): <
https://commits.webkit.org/296637@main
> Reviewed commits have been landed. Closing PR #47167 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-06-25 15:21:46 PDT
<
rdar://problem/154333132
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug