Setting innerHTML doesn't always use a scoped custom element registry associated with the context object https://bugs.webkit.org/show_bug.cgi?id=294956

Reviewed by Anne van Kesteren.

The bug was caused by HTMLConstructionSite::createHTMLElementOrFindCustomElementInterface not associating the newly created
element with the scoped custom element registry. This PR also fixes a bug in DocumentFragment::parseHTML that fast HTML parser
ignores scoped custom element registry by disabling fast parser when registry is not null.

* LayoutTests/imported/w3c/web-platform-tests/custom-elements/registries/Element-innerHTML-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/custom-elements/registries/Element-innerHTML.html: Synced as of
461b1b8ef3b0c998ab27ba57e85643f07a443096.
* Source/WebCore/dom/DocumentFragment.cpp:
(WebCore::DocumentFragment::parseHTML):
* Source/WebCore/html/parser/HTMLConstructionSite.cpp:
(WebCore::HTMLConstructionSite::createHTMLElementOrFindCustomElementInterface):

Canonical link: https://commits.webkit.org/296637@main